fix to project thumbnail to image transition / prevent overflow scroll

--- a/src/project/project.css
+++ b/src/project/project.css
@@ -1,7 +1,6 @@
 .project-preview-thumbnail.header {
-    transition: background 0.5s ease, transform 0s ease;
     animation-name: project-landing;
-    animation-duration: 0.8s;
+    animation-duration: 0.75s;
     animation-iteration-count: 1;
     animation-direction: alternate; 
     animation-timing-function: ease;
@@ -35,28 +34,13 @@
 }
 
 .project-preview-thumbnail.header > svg {
-    width: 40rem;
+    width: auto;
     position: relative;
 }
 
 @media (min-width: 768px) {
-    .project-preview-thumbnail.header {
-        transition: background 0.5s ease;
-        animation-name: project-landing-tablet;
-        animation-duration: 0.5s;
-    }
     .project-preview-container.header .banner.full-width {
         top: -1.5rem;
-    }
-
-    .project-preview-thumbnail.header > svg {
-        left: 50vw;
-    }
-}
-
-@media (min-width: 768px) {
-    .project-preview-thumbnail.header {
-        animation-duration: 1s;
     }
 }
 
@@ -316,22 +300,13 @@ p.intro {
 
 @keyframes project-landing {
     100% {  
-            top: 0vw;
-            transform: translate(-50vw, -2rem);
-            width: 150vw;
-            height: 15rem;
-            border-radius: 0;
-    }
-}
-
-@keyframes project-landing-tablet {
-    100% {  width: 150vw;
-            top: -5vw;
-            transform:translate(-50vw, -2rem);
+            top: 0;
+            transform: translate(0, -2rem);
+            width: 100%;
             height: 25rem;
-            left: 0;
             border-radius: 0;
-        }
+            left: 0;
+    }
 }
 
 @keyframes projectContentLoadIn {
